fixed project boxes text to make it more visible

--- a/index.css
+++ b/index.css
@@ -340,6 +340,11 @@ body {
 	h1 {
 		font-size: 50px;
 	}
+	
+	h3 {
+		margin: 5%;
+		padding: 3%;
+	}
 
 	.name {
 		margin-top: 40%;
